Change id for body in base.html and delete inline-size for footer in CSS

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
     {% load static %}
     <link rel="icon" type="image/png" href="{% static 'images/wqcs-icon.PNG' %}"/>    
 </head>
-<body id="body">
+<body id="body-main">
     <!-- Header -->
     <header>
         <div id="header" class="container-fluid fixed-top">
