Validate HTML files with https://validator.w3.org/ and write results in README.md

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -75,7 +75,7 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
                                     </div>
                                 {% else %}
                                 <img class="card-img-top"
-                                    src="/static/images/new-topic-in-blog.png">
+                                    src="/static/images/new-topic-in-blog.png" alt="Image related to topic of blog">
                                 {% endif %}
                                 <div class="image-flash">
                                     <p class="author">Author: {{ post.author }}</p>
