Add title to header of third table (other weather data) in Weather page

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -193,8 +193,8 @@
                 <!-- 3rd Table -->
                 <table id="other-weather-table">
                     <th>Date</th>
-                    <th>{{ other_weather_data.other }}</th>
-                    <th>{{ oother_weather_data.other }}</th>   
+                    <th>{{ other_value_to_display_1 }}</th>
+                    <th>{{ other_value_to_display_2 }}</th>   
                     {% for other in other_weather_data %}
                         <tr>
                             <td>{{ other.0.date }}</td>
