--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 1</h3>
                 <p>Sign in to send data to the database, otherwise you can only read weather data.</p>
-                <img class="instructions-image" src="static/images/instructions-log-in.PNG" alt="Image related to instructions sign-in">
+                <img class="instructions-image" src="{% static 'images/instructions-log-in.PNG' %}" alt="Image related to instructions sign-in">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 2</h3>
