Add "{% load static %}" to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 Code copied from Code Institute "I Think Therefore I Blog" project,
 # index.html file, on December 20th, 2022 at 18:58
 -->
-
+{% load static %}
 {% extends "base.html" %}
 {% block content %}
     <!-- Instructions -->
