--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
 
 {% extends "base.html" %}
 {% block content %}
-
+{% load static %}
     <!-- Instructions -->
     <div id="body-content" class="container">
         <!-- Description of the Goal of the Sie -->
@@ -25,7 +25,6 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
         <hr>
         <!-- Instructions for Weather Page -->
         <section class="row">   
-            {% load static %}
             <div class="col-12">
                 <h2 class="h2-titles">Weather Page</h2>
             </div>          
@@ -37,34 +36,34 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 2</h3>
                 <p>Zoom to the area of interest in the map.</p>
-                <img class="instructions-image" src="static/images/instructions-map.PNG" alt="Image related to instructions zoom">
+                <img class="instructions-image" src="{% static  'images/instructions-map.PNG' %}" alt="Image related to instructions zoom">
             </div> 
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 3</h3>
                 <p>Pick location on map where you want to get the weather data.</p>
-                <img class="instructions-image" src="static/images/instructions-map.PNG" alt="Image related to instructions for picking location on map">
+                <img class="instructions-image" src="{% static  'images/instructions-map.PNG' %}" alt="Image related to instructions for picking location on map">
             </div> 
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 4</h3>
                 <p>Alternatively, enter the desired location coordiantes manually.</p>
-                <img class="instructions-image" src="static/images/instructions-manual-coordinates-1.PNG" alt="Image related to instructions for entering coordinates">
-                <img class="instructions-image" src="static/images/instructions-manual-coordinates-2.PNG" alt="Image related to instructions for entering coordinates">
-                <img class="instructions-image" src="static/images/instructions-manual-coordinates-3.PNG" alt="Image related to instructions for entering coordinates">
+                <img class="instructions-image" src="{% static  'images/instructions-manual-coordinates-1.PNG' %}" alt="Image related to instructions for entering coordinates">
+                <img class="instructions-image" src="{% static  'images/instructions-manual-coordinates-2.PNG' %}" alt="Image related to instructions for entering coordinates">
+                <img class="instructions-image" src="{% static  'images/instructions-manual-coordinates-3.PNG' %}" alt="Image related to instructions for entering coordinates">
             </div> 
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 5</h3>
                 <p>Pres "Get the weather data."</p>
-                <img class="instructions-image" src="static/images/instructions-get-data.PNG" alt="Image related to instructions for entering coordinates">
+                <img class="instructions-image" src="{% static  'images/instructions-get-data.PNG' %}" alt="Image related to instructions for entering coordinates">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 6</h3>
                 <p>Pres "Send the weather data to the database. This option is disabled if you are not logged in."</p>
-                <img class="instructions-image" src="static/images/instructions-send-data.PNG" alt="Image related to instructions for sending the information to the database">
+                <img class="instructions-image" src="{% static  'images/instructions-send-data.PNG' %}" alt="Image related to instructions for sending the information to the database">
             </div> 
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 7</h3>
                 <p>Visualize data selecting 5, 15 or all records. First set (left) accounts for wind data, second one (middle) for temperature. Select which two other parameters to show in third set (right).</p>
-                <img class="instructions-image" src="static/images/instructions-visualize-data.png" alt="Image related to instructions for visualization the data on tables and Google Chart graphs">
+                <img class="instructions-image" src="{% static  'images/instructions-visualize-data.png' %}" alt="Image related to instructions for visualization the data on tables and Google Chart graphs">
             </div> 
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 8</h3>
@@ -80,7 +79,7 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 1</h3>
                 <p>Log in to create a discussion or ticket, or to add comments to them. If not logged in, you can only read the blogs.</p>
-                <img class="instructions-image" src="static/images/instructions-log-in.PNG" alt="Image related to instructions sign-in">
+                <img class="instructions-image" src="{% static  'images/instructions-log-in.PNG' %}" alt="Image related to instructions sign-in">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 2</h3>
@@ -100,7 +99,7 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 1</h3>
                 <p>Log in to contact us.</p>
-                <img class="instructions-image" src="static/images/instructions-log-in.PNG" alt="Image related to instructions sign-in">
+                <img class="instructions-image" src="{% static  'images/instructions-log-in.PNG' %}" alt="Image related to instructions sign-in">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 2</h3>
@@ -112,5 +111,5 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
 {% endblock %}
 
 {% block scripts %}
-<script src="static/js/index.js"></script>
+<script src="{% static  'js/index.js' %}"></script>
 {% endblock %}
