Try "{% load static %}" in a different line, not at the first line

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -212,7 +212,7 @@
 {% endblock %}
 
 {% block scripts %}
-
+{% load static %}
 <!-- Google Charts
 Line Charts
 Copied and modified from https://developers.google.com/chart/interactive/docs/gallery/linechart on January 5th, 2022, at 20:40. --> 
