Correct missing/multiple labels in data selectors after validating the weather.html file with https://wave.webaim.org/

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -102,7 +102,7 @@
             </div>
             <div id="s-d-o-3" class="col-12 col-lg-2">
                 <input type="radio" id="all-data" name="records-to-display" value="all-data">
-                <label for="5-days" class="radio-select-label">All Data</label>
+                <label for="all-data" class="radio-select-label">All Data</label>
             </div>
             <div id="s-d-o-4" class="col-12 col-lg-3">                    
                 <label for="s-d-o-list-1" class="radio-select-label">Value 1</label>                  
