Correct names in selection of data in weather page and assign default values for them

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -93,7 +93,7 @@
     <div class="container">
         <div id="select-data-options" class="row">            
             <div id="s-d-o-1" class="col-12 col-lg-2">
-                <input type="radio" id="5-days" name="records-to-display" value="5-last">
+                <input type="radio" id="5-days" name="records-to-display" value="5-last" checked="checked">
                 <label for="5-days" class="radio-select-label">Last 5 days</label>
             </div>
             <div id="s-d-o-2" class="col-12 col-lg-2">
@@ -111,7 +111,7 @@
                     <option value="humidity">Humidity</option>
                     <option value="visibility">Visibility</option>
                     <option value="sky">Sky</option>
-                    <option value="description">Main</option>
+                    <option value="main">Main</option>
                     <option value="sunrise">Sunrise</option>
                     <option value="sunset">Sunset</option>
                 </select>                                        
@@ -119,11 +119,11 @@
             <div id="s-d-o-5" class="col-12 col-lg-3">                    
                 <label for="s-d-o-list-2" class="radio-select-label">Value 2</label>                  
                 <select id="s-d-o-list-2" name="other-value-list-2" class="input-field">
-                    <option value="pressure">Pressure</option>
+                    <option value="pressure" selected="selected">Pressure</option>
                     <option value="humidity">Humidity</option>
                     <option value="visibility">Visibility</option>
-                    <option value="sky">Sky</option>
-                    <option value="description">Main</option>
+                    <option value="sky" selected="selected">Sky</option>
+                    <option value="main">Main</option>
                     <option value="sunrise">Sunrise</option>
                     <option value="sunset">Sunset</option>
                 </select>                                        
