Start cleaning and validating Python files

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
     
     <link rel="icon" type="image/png" href="{% static 'images/wqcs-icon.PNG' %}"/>    
 </head>
-<body id="body-main">
+<body id="body">
     <!-- Header -->
     <header>
         <div id="header" class="container-fluid fixed-top">
