Change Code Institute welcome/sing-in/sign-up/sign-out message from their template

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -15,7 +15,7 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
         <div class="col-md-8 mt-3 offset-md-2">
             <h3>{% trans "Sign Up" %}</h3>
 
-            <p>{% blocktrans %}Welcome back to the code|star blog. Do you already have an account? Then please <a
+            <p>{% blocktrans %}Welcome! If you already have an account please <a
                     class="link" href="{{ login_url }}">sign in</a> instead.{% endblocktrans %}</p>
         </div>
     </div>
