--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -17,7 +17,7 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
         <div class="col-md-8 mt-3 offset-md-2">
             <h3>{% trans "Sign In" %}</h3>
 
-            <p>{% blocktrans %}Welcome!. To leave a ticket or comment please sign in. If
+            <p>{% blocktrans %}Welcome! To leave a ticket or comment please sign in. If
                 you do not have an account, then please <a class="link" href="{{ signup_url }}">sign up</a>
                 first.{% endblocktrans %}</p>
         </div>
