--- a/static/css/style.css
+++ b/static/css/style.css
@@ -697,6 +697,11 @@ td {
         padding:7px 4px 7px;
     }
 
+    #body > div > div:nth-child(1) > div > p,
+    #body > div > div:nth-child(1) > div > h3 {
+        margin-top: 100px;
+    }
+
     /* FOOTER */
 
     #company-links > nav > a {
