--- a/templates/base.html
+++ b/templates/base.html
@@ -141,7 +141,7 @@
                         </nav>
                     </div>
                     <div id="footer-contact-link">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                     </div>
                 </div>
             </div>    
