--- a/templates/weather.html
+++ b/templates/weather.html
@@ -130,6 +130,18 @@
             </div>           
         </div>
         <hr>
+        <!-- CRUD Panel Title -->
+        <div id="crud-title" class="row b-primary">
+            <p>Title</p>
+        </div>
+        <!-- CRUD Panel Buutons -->
+        <div id="crud-buttons" class="row b-light">
+            <p>Record Edition</p>
+        </div>
+        <!-- CRUD Panel Status -->
+        <div id="crud-status" class="row text-center b-success">
+            <p>Title</p>
+        </div>
         <!-- Charts and Tables Data -->
         <div id="weather_extra_info" class="row">
             <div id="chart-left" class="col-12 order-1 col-lg-4 order-lg-1">
