--- a/templates/weather.html
+++ b/templates/weather.html
@@ -130,18 +130,33 @@
             </div>           
         </div>
         <hr>
-        <!-- CRUD Panel Title -->
-        <div id="crud-title" class="row b-primary">
-            <p>Title</p>
+        <!-- CRUD Panel -->
+        <div class="container">
+            <div class="row">
+                <!-- CRUD Panel Title --> 
+                <div id="crud-panel-title" class="col-12">
+                    <p>Record Edition</p>
+                </div>
+                <!-- CRUD Panel Buutons -->       
+                <div class="col-12 col-md-6 col-lg-3 crud-button-div">
+                    <button class="crud-button" type="submit">Create</button>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 crud-button-div">
+                    <button class="crud-button" type="submit">Select</button>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 crud-button-div">
+                    <button class="crud-button" type="submit">Update</button>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3 crud-button-div">
+                    <button class="crud-button" type="submit">Delete</button>
+                </div>
+                <!-- CRUD Panel Status -->
+                <div id="crud-panel-status" class="col-12">
+                    <p>Status</p>
+                </div>
+            </div>
         </div>
-        <!-- CRUD Panel Buutons -->
-        <div id="crud-buttons" class="row b-light">
-            <p>Record Edition</p>
-        </div>
-        <!-- CRUD Panel Status -->
-        <div id="crud-status" class="row text-center b-success">
-            <p>Title</p>
-        </div>
+        <hr>
         <!-- Charts and Tables Data -->
         <div id="weather_extra_info" class="row">
             <div id="chart-left" class="col-12 order-1 col-lg-4 order-lg-1">
